@@ -1,3 +1,9 @@
+2004-03-22  David Schleef  <ds@schleef.org>
+
+	* sys/oss/Makefile.am:
+	* sys/oss/oss_probe.c: (main), (probe_check), (add_range),
+	(check_rate), (add_rate):  Rate probing test app.
+
 2004-03-21  Benjamin Otte  <otte@gnome.org>
 
 	* gst/audioconvert/gstaudioconvert.c: (gst_audio_convert_link),
